--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -1373,7 +1373,7 @@ In the remainder of this section, I discuss the two extra light heads that I com
 \bg. m\\
  \tsc{lh}.\tsc{an}.\tsc{dat}\\
 
-In Chapter \ref{ch:the-basic-idea}, I suggested that the relative pronoun contains at least one features more than the extra light head. In my proposal, it is actually two features, namely \tsc{wh} and \tsc{rel}. This leaves the functional for the extra light head as shown in \ref{ex:fseq-elh}.
+In Chapter \ref{ch:the-basic-idea}, I suggested that the relative pronoun contains at least one feature more than the extra light head. In my proposal, it is actually two features, namely \tsc{wh} and \tsc{rel}. This leaves the functional for the extra light head as shown in \ref{ex:fseq-elh}.
 
 \ex.\label{ex:fseq-elh}
 \begin{forest} boom
@@ -1394,7 +1394,7 @@ In Chapter \ref{ch:the-basic-idea}, I suggested that the relative pronoun contai
 
 It contains the pronominal feature \tsc{ref}, the gender features \tsc{cl} and \tsc{an}, the number feature \tsc{ind} and case features \tsc{k}.
 
-The two lexical entries that are required to spell these extra light heads out are the final consonants I introduced the lexical entries for in Section \ref{sec:mg-rel}. I repeat them from \ref{ex:mg-entries-nm} in \ref{ex:mg-entries-nm-rep}.
+I introduced the lexical entries that are required to spell out these features in Section \ref{sec:mg-rel}. I repeat them from \ref{ex:mg-entries-nm} in \ref{ex:mg-entries-nm-rep}.
 
 \ex.\label{ex:mg-entries-nm-rep}
 \a.\label{ex:mg-entry-n-rep1}
@@ -1813,7 +1813,7 @@ Therefore, the extra light cannot be deleted, and the relative pronoun cannot be
 
 Modern German is an example of an internal-only type of language. This means that headless relatives are grammatical in the language, as long as the internal and external case match or the internal case is the more complex one.
 
-I derive this from the morphology of light head and relative pronouns in Modern German. The light head corresponds to a single lexical entry, which spells out phi- and case-features. The relative pronoun corresponds in addition to that to another lexical entry, one that amongst other spells out a relative feature. The Modern German light head and relative pronoun are schematically shown in Figure \ref{fig:rel-lh-mg-sum}.
+I derive this from the morphology of light heads and relative pronouns in Modern German. The light head corresponds to a single lexical entry, which spells out phi- and case-features. The relative pronoun corresponds in addition to that to another lexical entry, one that amongst other spells out a relative feature. The Modern German light head and relative pronoun are schematically shown in Figure \ref{fig:rel-lh-mg-sum}.
 
 \begin{figure}[htbp]
   \center
