--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -1269,21 +1269,68 @@ I introduced the lexical entries that are required to spell out these features i
   {\draw (.east) node[right]{⇔ \tit{mu}}; }
 \end{forest}
 
-%%%
+In what follows, I construct the Polish extra light heads. Until the feature \tsc{ind}, the derivation is identical to the one of the relative pronoun. I give the syntactic structure at that point in \ref{ex:pol-spellout-o-ind-rep}.
 
-In what follows, I construct the Polish extra light heads. Until the feature \tsc{ind}, the derivation is identical to the one of the relative pronoun.
+\ex.\label{ex:pol-spellout-o-ind-rep}
+\begin{forest} boom
+  [\tsc{ind}P
+  [\tsc{an}P
+      [\phantom{x}\tit{o}\phantom{x}, roof]
+  ]
+      [\tsc{ind}P,
+      tikz={
+      \node[label=below:\tit{go},
+      draw,circle,
+      scale=0.95,
+      fit to=tree]{};
+      }
+          [\tsc{ind}]
+      ]
+  ]
+\end{forest}
 
-%the situation is:
+Next, the feature \tsc{f}1 is merged. The feature \tsc{f}1 is merged with the \tsc{ind}P, forming an \tsc{nom}P. This phrase is not contained in any of the lexical entries Polish. The first movement is tried, and the specifier of the \tsc{ind}P, the \tsc{an}P, is moved to the specifier of \tsc{nom}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-nom}.
 
-Therefore, I start at point at which the feature \tsc{f}1 is merged. The feature \tsc{f}1 is merged with the \tsc{ind}P, forming an \tsc{nom}P. This phrase is not contained in any of the lexical entries Polish. The first movement is tried, and the specifier of the \tsc{ind}P, the \tsc{an}P, is moved to the specifier of \tsc{nom}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go}, so it is spelled out as \tit{go}.
+\ex.\label{ex:pol-elh-nom}
+\begin{adjustbox}{max width=0.9\textwidth}
+\begin{forest} boom
+  [\tsc{nom}P, s sep=25mm
+      [\tsc{an}P,
+      tikz={
+      \node[label=below:\tit{o},
+      draw,circle,
+      scale=0.9,
+      fit to=tree]{};
+      }
+          [\tsc{an}]
+          [\tsc{cl}P
+              [\tsc{cl}]
+              [\tsc{ref}]
+          ]
+      ]
+      [\tsc{nom}P,
+      tikz={
+      \node[label=below:\tit{go},
+      draw,circle,
+      scale=0.9,
+      fit to=tree]{};
+      }
+          [\tsc{f}1]
+          [\tsc{ind}P
+              [\tsc{ind}]
+          ]
+      ]
+  ]
+\end{forest}
+\end{adjustbox}
 
 For the accusative extra light head, the last feature is merged: the \tsc{f}2.
-The feature is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is not contained in any of the lexical entries. The first movement is tried, and the specifier of the \tsc{nom}P, the \tsc{an}P, is moved to the specifier of \tsc{acc}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-acc}.
+The feature is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is not contained in any of the lexical entries. The first movement is tried, and the specifier of the \tsc{nom}P, the \tsc{an}P, is moved to the specifier of \tsc{acc}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-acc}.
 
 \ex.\label{ex:pol-elh-acc}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-  [\tsc{dat}P, s sep=40mm
+  [\tsc{acc}P, s sep=30mm
       [\tsc{an}P,
       tikz={
       \node[label=below:\tit{o},
@@ -1318,12 +1365,12 @@ The feature is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is
 
 For the dative relative pronoun, one more feature is merged: the \tsc{f}3.
 The feature  is merged with the \tsc{acc}P, forming an \tsc{dat}P. This phrase is not contained in any of the lexical entries. The first movement is tried, and the specifier of the \tsc{acc}P, the \tsc{an}P, is moved to the specifier of \tsc{dat}P.
-This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu}, so it is spelled out as \tit{mu}, as shown in \ref{ex:pol-elh-dat}.
+This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu-rep}, so it is spelled out as \tit{mu}, as shown in \ref{ex:pol-elh-dat}.
 
 \ex.\label{ex:pol-elh-dat}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-  [\tsc{dat}P, s sep=45mm
+  [\tsc{dat}P, s sep=35mm
       [\tsc{an}P,
       tikz={
       \node[label=below:\tit{o},
