--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -1,175 +1,133 @@
 % !TEX root = thesis.tex
 
-structure
-- intro
-  - first possible light head, matching + int wins
-  - second possible light head, matching + ext wins
-- relative pronoun, show that it's a D
-- light head
-  - extra light head
-  - light head
-  - possible prediction: ext>int = def, int>ext = wh, not what we see, show 4 examples
-- comparing constituents
-  - first possible head: matching + int wins
-  - second possible head
-    - matching works!
-    - ext wins doesn't work, so first larger syntactic structure: head needs to be up there, for instance cinque (he also says we need to have it up there)
-      then: yes, at some point in the derivation, and then merge the k2
-- summary :)
-
-
 \chapter{Deriving the unrestricted type}\label{ch:deriving-unrestricted}
 
-Languages of the unrestricted type can be summarizes as in Table \ref{tbl:rel-lh-ohg}.
+In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the unrestricted type have two possible light heads, which are part of the derivation under different circumstances. The first possible light head can part of the derivation used when the internal and external case match, and it appears when the internal case is more complex than the external one. The second possible light head can be part of the derivation when the internal and the external case too, and it appears when the external case is more complex than the internal one.
 
-\begin{table}[htbp]
-  \center
-  \caption{Grammaticality in the internal-only type}
-\begin{tabular}{cc}
-  \toprule
-                                        & surface pronoun         \\
-  \cmidrule(lr){2-2}
-\tsc{k}\scsub{int} = \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int/ext} \\
-\tsc{k}\scsub{int} > \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int}     \\
-\tsc{k}\scsub{int} < \tsc{k}\scsub{ext} & \tsc{lh}\scsub{ext}      \\
-\bottomrule
-\end{tabular}
-\label{tbl:rel-lh-ohg}
-\end{table}
-
-When the internal and the external case match, and there is a tie, the relative pronoun surfaces in the this particular case (just like in all other language types).
-When the internal case wins the case competition, this type of language allows the internal case to surface. This means that the relative pronoun with a more complex internal case can be the surface pronoun.
-When the external case wins the case competition, this type of language allows also the external case to surface. This means that the light head with a more complex external case can also be the surface pronoun.
-
-The situation in which the unrestricted type of language differs from the internal-only type is the one in which the external case wins the case competition. This is ungrammatical in the internal-only type of language but it is grammatical in the unrestricted type of language.
-In Chapter \ref{ch:constituent-containment}, I suggested that this difference can be derived from a difference in spellout between the two languages types. The difference lies in whether non-case part of the light head and the relative pronoun correspond to the same lexical entry or not.
-
-In the internal-only type of language, the feature \tsc{rel} is spelled out separately from the ϕP, by its own lexical entry, as I showed is Chapter \ref{ch:deriving-onlyinternal}. In the unrestricted type of language, the feature \tsc{rel} is spelled out by a lexical entry that contains the ϕP. Moreover, the \tsc{rel}P and the ϕP are syncretic: there is not a more specific lexical entry for the ϕP (without the feature \tsc{rel}). I show this in Figure \ref{fig:rel-lh-unrest-syn-rep}.
+In the first possible light head, the light head corresponds to the phi- and case-feature part of the relative pronoun. The phi- and case-features are spelled out by a portmanteau morpheme, just as they are in the internal-only type of language. This means that the features of the relative pronoun and the light head are spelled out in such a way that they form the constituents shown in Figure \ref{fig:rel-lh-unres-simple}.
 
 \begin{figure}[htbp]
   \center
   \begin{tabular}[b]{ccc}
       \toprule
-      light head & & relative pronoun \\
+      light head 1 & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
       [\tsc{k}P,
+      tikz={
+      \node[draw,circle,
+      scale=0.85,
+      fit to=tree]{};
+      }
           [\tsc{k}]
-          [ϕP,
-          tikz={
-          \node[label=below:\tit{α},
-          draw,circle,
-          scale=0.8,
-          fit to=tree]{};
-          }
-              [ϕ, baseline]
+          [ϕP
+              [\phantom{xxx}, roof, baseline]
           ]
       ]
       \end{forest}
       & \phantom{x} &
     \begin{forest} boom
-      [\tsc{k}P
-          [\tsc{k}]
+      [\tsc{rel}P, s sep = 20 mm
           [\tsc{rel}P,
           tikz={
-          \node[label=below:\tit{α},
-          draw,circle,
+          \node[draw,circle,
           scale=0.85,
           fit to=tree]{};
           }
-              [\tsc{rel}]
+              [\phantom{xxx}, roof, baseline]
+          ]
+          [\tsc{k}P,
+          tikz={
+          \node[draw,circle,
+          scale=0.85,
+          fit to=tree]{};
+          }
+              [\tsc{k}]
               [ϕP
-                  [ϕ, baseline]
+                  [\phantom{xxx}, roof, baseline]
               ]
           ]
       ]
     \end{forest}\\
       \bottomrule
   \end{tabular}
-   \caption {\tsc{lh} and \tsc{rp} in the unrestricted type (repeated)}
-  \label{fig:rel-lh-unrest-syn-rep}
+   \caption {\tsc{lh}-1 and \tsc{rp} in the unrestricted type}
+  \label{fig:rel-lh-unres-simple-1}
 \end{figure}
 
-When the internal and the external case match, the relative pronoun can delete the light head, because the light head forms a single constituent within the relative pronoun.
-When the internal case is more complex than the external case, the relative pronoun can still delete the light head, because it still forms a constituent within the relative pronoun.
-When the external case is more complex than the internal case, the light head can delete the relative pronoun. The relative pronoun does not form a constituent within the light head, but the features that the light head lacks are contained in the lexical entry that the light head corresponds to. I suggest that this syncretism is also enough to license the deletion of the relative pronoun.
+These lexical entries lead to a grammaticality pattern as shown in Table \ref{tbl:overview-unres-1}.
 
-This is not the structure we see of Old High German.
+\begin{table}[htbp]
+  \center
+  \caption{Grammaticality in the unrestricted type (part 1)}
+  \begin{adjustbox}{max width=\textwidth}
+  \begin{tabular}{cccccc}
+    \toprule
+    situation           & \multicolumn{2}{c}{lexical entries}       & containment         & deleted             & surfacing           \\
+    \cmidrule(lr){1-1}    \cmidrule(lr){2-3}                          \cmidrule(lr){4-4}    \cmidrule(lr){5-5}    \cmidrule(lr){6-6}
+                        & \tsc{lh}            & \tsc{rp}            &                     &                     &                     \\
+                          \cmidrule(lr){2-2}    \cmidrule(lr){3-3}
+  \tsc{k}\scsub{int} = \tsc{k}\scsub{ext}               &
+  [\tsc{k}\scsub{1}[ϕ]]                                 &
+  [\tsc{rel}], [\tsc{k}\scsub{1}[ϕ]]                    &
+  structure & \tsc{lh} & \tsc{rp}\scsub{int}            \\
+  \tsc{k}\scsub{int} > \tsc{k}\scsub{ext}               &
+  [\tsc{k}\scsub{1}[ϕ]]                                 &
+  [\tsc{rel}], [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}[ϕ]]]  &
+  structure & \tsc{lh} & \tsc{rp}\scsub{int}            \\
+  \bottomrule
+  \end{tabular}
+  \end{adjustbox}
+\label{tbl:overview-unres-1}
+\end{table}
 
-I give a compact version of the Old High German light heads and relative pronouns in Figure \ref{fig:rel-lh-pol}.
+First consider the situation in which the internal and the external case match. The situation here is identical to the one in the internal-only type of language. The light head consists of a phi- and case-feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such syntactic structures that the light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
+
+Consider now the situation in the internal case wins the case competition. Here situation is identical to the one in the internal-only type of language too. The light head consists of a phi- and case-feature portmanteau. The relative pronoun consists of a phi- and case-feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-unres-1}) plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such syntactic structures that the light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
+
+In Chapter \ref{ch:typology}, I showed that Old High German is a language of the unrestricted type. In this chapter, I show that Old High German light heads and relative pronouns have this type of structure described in Figure \ref{fig:rel-lh-unres-simple-1}. I give a compact version of the structures in Figure \ref{fig:rel-lh-ohg}.
 
 \begin{figure}[htbp]
   \center
-  \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}[b]{ccc}
       \toprule
       light head & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-        [\tsc{d}P
-            [\tsc{d}P,
-            tikz={
-            \node[label=below:\tit{d},
-            draw,circle,
-            scale=0.75,
-            fit to=tree]{};
-            }
+        [\tsc{k}P,
+        tikz={
+        \node[label=below:\tit{n/m},
+        draw,circle,
+        scale=0.75,
+        fit to=tree]{};
+        }
+            [\tsc{k}]
+            [ϕP
                 [\phantom{xxx}, roof, baseline]
-            ]
-            [\tsc{med}P, s sep = 15mm
-                [\tsc{med}P,
-                tikz={
-                \node[
-                draw,circle,
-                scale=0.75,
-                fit to=tree]{};
-                }
-                    [\phantom{xxx}, roof, baseline]
-                ]
-                [\tsc{k}P,
-                tikz={
-                \node[
-                draw,circle,
-                scale=0.75,
-                fit to=tree]{};
-                }
-                    [\phantom{xxx}, roof, baseline]
-                ]
             ]
         ]
       \end{forest}
       & \phantom{x} &
       \begin{forest} boom
-        [\tsc{rel}P, s sep = 15mm
+        [\tsc{rel}P, s sep=15mm
             [\tsc{rel}P,
             tikz={
-            \node[label=below:\tit{d},
+            \node[label=below:\tit{de},
             draw,circle,
             scale=0.75,
             fit to=tree]{};
             }
-                [\tsc{rel}]
-                [\tsc{d}P
-                    [\phantom{xxx}, roof]
-                ]
+                [\phantom{xxx}, roof]
             ]
-            [\tsc{med}P, s sep = 15mm
-                [\tsc{med}P,
-                tikz={
-                \node[
-                draw,circle,
-                scale=0.75,
-                fit to=tree]{};
-                }
-                    [\phantom{xxx}, roof, baseline]
-                ]
-                [\tsc{k}P,
-                tikz={
-                \node[
-                draw,circle,
-                scale=0.75,
-                fit to=tree]{};
-                }
+            [\tsc{k}P,
+            tikz={
+            \node[label=below:\tit{n/m},
+            draw,circle,
+            scale=0.75,
+            fit to=tree]{};
+            }
+                [\tsc{k}]
+                [ϕP
                     [\phantom{xxx}, roof, baseline]
                 ]
             ]
@@ -177,21 +135,99 @@ I give a compact version of the Old High German light heads and relative pronoun
       \end{forest}\\
       \bottomrule
   \end{tabular}
-  \end{adjustbox}
-   \caption {\tsc{lh} and \tsc{rp} in Old High German}
+   \caption {\tsc{lh}-1 and \tsc{rp} in Modern German}
   \label{fig:rel-lh-ohg}
 \end{figure}
 
-The structures in Figure \ref{fig:rel-lh-ohg} in no way resemble Figure \ref{fig:rel-lh-unrest-syn-rep}.
+Consider the first possible light head in Figure \ref{fig:rel-lh-ohg}.
+These light heads (i.e. phi- and case-features) in Old High German are spelled out by a single morpheme, indicated by the circle around the structure. They are spelled out as \tit{n} or \tit{m}, depending on which case they realize.
+Consider the relative pronoun in Figure \ref{fig:rel-lh-ohg}.
+Relative pronouns in Old High German consist of two morphemes: the constituent that forms the light head (i.e. phi- and case features) and the \tsc{rel}P, again indicated by the circles. The \tsc{rel}P is spelled out as \tit{de}. %same as modern german, noly D
+Throughout this chapter, I discuss the exact feature content of relative pronouns and light heads, I give lexical entries for them, and I show how these lexical entries form the constituents shown in Figure \ref{fig:rel-lh-ohg}.
 
-The section is structured as follows.
-First, I discuss how Old High German differs from Modern German and Polish.
-The light-headed relative that is the source for the headless relative is an existing light-headed relative. The deletion is optional.
-Old High German can only be derived with multiple constituent containment. I wonder whether this might be a strategy that used more broadly for optional deletions of the light head. I show how Gothic is a variant of the Old High German pattern, which can also be derived with multiple constituent containment.
 
-In the end, I discuss the unrestricted type that I am really talking about.
 
-\section{How Old High German differs}
+
+In the second possible light head, the light head corresponds to the phi- and case-feature part of the relative pronoun plus an additional feature X. This feature X is also present in the morpheme that spells out the feature \tsc{rel}. The phi- and case-features are spelled out by a portmanteau morpheme, just as they are in the internal-only type of language. The feature X is spelled out by a separate morpheme, which is the same morpheme that spells out X plus the feature \tsc{rel}. This means that the features of the relative pronoun and the light head are spelled out in such a way that they form the constituents shown in Figure \ref{fig:rel-lh-unres-simple}.
+
+\begin{figure}[htbp]
+  \center
+  \begin{adjustbox}{max width=\textwidth}
+  \begin{tabular}[b]{ccc}
+      \toprule
+      light head 2 & & relative pronoun \\
+      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+      \begin{forest} boom
+      [XP, s sep = 20 mm
+          [XP,
+          tikz={
+          \node[label=below:\tit{X},
+          draw,circle,
+          scale=0.85,
+          fit to=tree]{};
+          }
+              [\phantom{xxx}, roof, baseline]
+          ]
+          [\tsc{k}P,
+          tikz={
+          \node[draw,circle,
+          scale=0.85,
+          fit to=tree]{};
+          }
+              [\tsc{k}]
+              [ϕP
+                  [\phantom{xxx}, roof, baseline]
+              ]
+          ]
+      ]
+      \end{forest}
+      & \phantom{x} &
+    \begin{forest} boom
+      [\tsc{rel}P, s sep = 20 mm
+          [\tsc{rel}P,
+          tikz={
+          \node[label=below:\tit{X},
+          draw,circle,
+          scale=0.85,
+          fit to=tree]{};
+          }
+              [\tsc{rel}]
+              [XP
+                  [\phantom{xxx}, roof, baseline]
+              ]
+          ]
+          [\tsc{k}P,
+          tikz={
+          \node[draw,circle,
+          scale=0.85,
+          fit to=tree]{};
+          }
+              [\tsc{k}]
+              [ϕP
+                  [\phantom{xxx}, roof, baseline]
+              ]
+          ]
+      ]
+    \end{forest}\\
+      \bottomrule
+  \end{tabular}
+  \end{adjustbox}
+   \caption {\tsc{lh}-2 and \tsc{rp} in the unrestricted type}
+  \label{fig:rel-lh-unres-2}
+\end{figure}
+
+First consider the situation in which the internal and the external case match. The light head consists of a phi- and case-feature portmanteau and a morpheme that spells out the feature X, which corresponds to phonological form \tit{X}. The relative pronoun consists of the same phi- and case-feature morpheme and a morpheme that spells out the feature X and the feature \tsc{rel}, which corresponds to the phonological form \tit{X} too. When the internal and the external case match, the phonological form corresponding to the phi- and case features is identical between the light head and the relative pronoun too. These lexical entries create such syntactic structures that the light head and the relative pronoun are formally identical. Since there is formal containment, one of the elements can be deleted, and the the other one surfaces with its case.
+
+Consider now the situation in the external case wins the case competition. The light head consists of a phi- and case-feature portmanteau and a morpheme that spells out the feature X, which corresponds to phonological form \tit{X}. The relative pronoun consists of the same phi- and case-feature morpheme and a morpheme that spells out the feature X and the feature \tsc{rel}, which corresponds to the phonological form \tit{X} too. When the external case is more complex than the internal case (i.e. when the two cases differ), the phonological forms corresponding to the phi- and case features of the light head and the relative pronoun differ. However, the derivation in which the external case is more complex than the internal one goes through a stage in which the internal and the external case match. Therefore, at that stage, these lexical entries form such syntactic structures that the light head and the relative pronoun are formally identical. Since there is formal containment, one of the elements can be deleted, and the the other one surfaces with its case. Then, the more complex case is merged to the remaining element.
+
+This chapter is structured as follows.
+First, I discuss the relative pronoun. I decompose the relative pronouns into the two morphemes I showed in Figure \ref{fig:rel-lh-mg}, and I show which features each of the morphemes corresponds to. I illustrate how different morphemes are combined into the given constituents.
+Then I discuss the light head. I argue that Modern German headless relatives are derived from a type of light-headed relative clause that does not surface in the language. I show that the light head corresponds to one of the morphemes of the relative pronoun (the \tsc{k}P in Figure \ref{fig:rel-lh-mg}).
+Finally, I compare the constituents of the light head and the relative pronoun. I show that the light head can be deleted when the internal case matches the external case or when the internal case is more complex than the external case. When the external case is more complex, I show that none of the elements can be deleted.
+
+\section{The Old High German German relative pronoun}
+
+- relative pronoun, show that it's a D
 
 What is different here, is that the relative pronoun is a \tsc{d}-pronoun instead of a \tsc{wh}.
 
@@ -306,10 +342,72 @@ not: `and he replied to whoever spoke to him'
  The light head in a light-headed relative is a demonstrative pronoun.
 
 
-\section{Comparing multiple constituents}\label{sec:comparing-ohg}
 
-Is this an alternative for optional deletion?
-I show first how it works for Old High German. Then I show a variant of it, Gothic.
+
+
+
+
+
+
+
+
+\section{The Old High German light head}
+
+\subsection{The extra light head}
+
+\subsection{The light head}
+
+\subsection{Possible predictions}
+
+  - possible prediction: ext>int = def, int>ext = wh, not what we see, show 4 examples
+
+
+
+
+
+
+\section{Comparing constituents}\label{sec:comparing-ohg}
+
+\subsection{With the extra light head}
+
+Consider the examples in \ref{ex:ohg-nom-nom-rep}, in which the internal nominative case competes against the external nominative case. The relative clauses are marked in bold, and the light heads and the relative pronouns are underlined. As the light head and the relative pronoun are identical it is impossible to see which of them surfaces.
+The internal case is nominative, as the predicate \tit{senten} `to send' takes nominative subjects. The relative pronoun \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case.
+The external case is nominative as well, as the predicate \tit{queman} `to come' also takes nominative subjects. The light head \tit{dher} `\ac{dem}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case.
+\ref{ex:ohg-nom-nom-rep-rel} is the variant of the sentence in which the light head is absent (indicated by the square brackets) and the relative pronoun surfaces.
+\ref{ex:ohg-nom-nom-rep-lh} is the variant of the sentence in which the relative pronoun is absent (indicated by the square brackets) and the light head surfaces.
+
+\ex.\label{ex:ohg-nom-nom-rep}
+\ag. quham \underline{[dher]} \tbf{dher} \underline{\tbf{chisendit}} \tbf{scolda} \tbf{uuerdhan}\\
+ come.\ac{pst}.3\ac{sg}\scsub{[nom]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} send.\ac{pst}.\ac{ptcp}\scsub{[nom]} should.\ac{pst}.3\ac{sg} become.\ac{inf}\\
+ `the one, who should have been sent, came' \flushfill{Old High German, \ac{isid} 35:5}\label{ex:ohg-nom-nom-rep-rel}
+\bg. quham \underline{dher} [\tbf{dher}] \underline{\tbf{chisendit}} \tbf{scolda} \tbf{uuerdhan}\\
+ come.\ac{pst}.3\ac{sg}\scsub{[nom]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} send.\ac{pst}.\ac{ptcp}\scsub{[nom]} should.\ac{pst}.3\ac{sg} become.\ac{inf}\\
+ `the one, who should have been sent, came' \flushfill{Old High German, \ac{isid} 35:5}\label{ex:ohg-nom-nom-rep-lh}
+
+In Figure \ref{fig:ohg-int=ext}, I give the syntactic structure of the light head at the top and the syntactic structure of the relative pronoun at the bottom.
+
+
+
+
+
+Consider the example in \ref{ex:ohg-nom-acc-rep}, in which the internal accusative case competes against the external nominative case. The relative clause is marked in bold, and the light head and the relative pronoun are underlined.
+The internal case is accusative, as the predicate \tit{zellen} `to tell' takes accusative objects. The relative pronoun \tit{then} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the accusative case. This is the element that surfaces.
+The external case is nominative, as the predicate \tit{sin} `to be' takes nominative objects. The light head \tit{ther} `\ac{dem}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case. It is placed between square brackets because it does not surface.
+
+\exg. Thíz ist [\underline{ther}] \underline[\tbf{then}] \tbf{sie} \tbf{zéllent}\\
+\ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} 3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
+`this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc-rep}
+
+
+
+
+matching + int wins
+
+\subsection{With the light head}
+
+- matching works!
+- ext wins doesn't work, so first larger syntactic structure: head needs to be up there, for instance cinque (he also says we need to have it up there)
+  then: yes, at some point in the derivation, and then merge the k2
 
 Consider the examples in \ref{ex:ohg-nom-nom-rep}, in which the internal nominative case competes against the external nominative case. The relative clauses are marked in bold, and the light heads and the relative pronouns are underlined. As the light head and the relative pronoun are identical it is impossible to see which of them surfaces.
 The internal case is nominative, as the predicate \tit{senten} `to send' takes nominative subjects. The relative pronoun \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case.
@@ -483,177 +581,7 @@ I continue with the middle constituent of the light head that spells out as \tit
 I end with the left-most constituent of the light head that spells out as \tit{d} {\tsc{d}P}. This constituent is also a constituent in the relative pronoun, contained in \tsc{rp}P.
 All three constituent of the light head are also a constituent within the relative pronoun, and the light head can be absent.
 
-Consider the example in \ref{ex:ohg-nom-acc-rep}, in which the internal accusative case competes against the external nominative case. The relative clause is marked in bold, and the light head and the relative pronoun are underlined.
-The internal case is accusative, as the predicate \tit{zellen} `to tell' takes accusative objects. The relative pronoun \tit{then} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the accusative case. This is the element that surfaces.
-The external case is nominative, as the predicate \tit{sin} `to be' takes nominative objects. The light head \tit{ther} `\ac{dem}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case. It is placed between square brackets because it does not surface.
 
-\exg. Thíz ist [\underline{ther}] \underline[\tbf{then}] \tbf{sie} \tbf{zéllent}\\
-\ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} 3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
-`this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc-rep}
-
-In Figure \ref{fig:ohg-int-wins}, I give the syntactic structure of the light head at the top and the syntactic structure of the relative pronoun at the bottom.
-
-\begin{figure}[htbp]
-  \center
-  \begin{adjustbox}{max width=\textwidth}
-  \begin{tabular}[b]{c}
-      \toprule
-      \tsc{nom} extra light head \tit{th-e-r}
-      \\
-      \cmidrule{1-1}
-      \begin{forest} boompje
-        [\tsc{d}P, s sep=20mm
-            [\tsc{d}P,
-            tikz={
-            \node[label=below:\tit{th},
-            draw,circle,
-            scale=0.8,
-            fit to=tree]{};
-            \node[draw,circle,
-            dashed,
-            fill=DG,fill opacity=0.2,
-            scale=0.9,
-            fit to=tree]{};
-            }
-                [\tsc{d}, roof]
-            ]
-            [\tsc{nom}P, s sep=25mm
-                [\tsc{med}P,
-                tikz={
-                \node[label=below:\tit{e},
-                draw,circle,
-                scale=0.85,
-                fit to=tree]{};
-                \node[draw,circle,
-                dashed,
-                fill=DG,fill opacity=0.2,
-                scale=0.9,
-                fit to=tree]{};
-                }
-                    [\tsc{dx}\scsub{2}]
-                    [\tsc{prox}P
-                        [\tsc{dx}\scsub{1}]
-                        [\tsc{ref}]
-                    ]
-                ]
-                [\tsc{nom}P,
-                tikz={
-                \node[label=below:\tit{r},
-                draw,circle,
-                scale=0.95,
-                fit to=tree]{};
-                \node[draw,circle,
-                dashed,
-                fill=DG,fill opacity=0.2,
-                scale=1,
-                fit to=tree]{};
-                }
-                    [\tsc{f}1]
-                    [\tsc{ind}P
-                        [\tsc{ind}]
-                        [\tsc{an}P
-                            [\tsc{an}]
-                            [\tsc{cl}P
-                                [\tsc{cl}]
-                            ]
-                        ]
-                    ]
-                ]
-            ]
-        ]
-      \end{forest}
-      \\
-      \toprule
-      \tsc{acc} relative pronoun \tit{th-e-n}
-      \\
-      \cmidrule{1-1}
-          \begin{forest} boompje
-            [\tsc{rp}P, s sep=15mm
-                [\tsc{rp}P,
-                tikz={
-                \node[label=below:\tit{th},
-                draw,circle,
-                scale=0.95,
-                fit to=tree]{};
-                }
-                    [\tsc{rp}]
-                    [\tsc{d}P,
-                    tikz={
-                    \node[draw,circle,
-                    dashed,
-                    scale=0.8,
-                    fit to=tree]{};
-                    }
-                        [\tsc{d}, roof]
-                    ]
-                ]
-              [\tsc{acc}P, s sep=30mm
-                  [\tsc{med}P,
-                  tikz={
-                  \node[label=below:\tit{e},
-                  draw,circle,
-                  scale=0.85,
-                  fit to=tree]{};
-                  \node[draw,circle,
-                  dashed,
-                  scale=0.9,
-                  fit to=tree]{};
-                  }
-                      [\tsc{dx}\scsub{2}]
-                      [\tsc{prox}P
-                          [\tsc{dx}\scsub{1}]
-                          [\tsc{ref}]
-                      ]
-                  ]
-                  [\tsc{acc}P,
-                  tikz={
-                  \node[label=below:\tit{n},
-                  draw,circle,
-                  scale=0.95,
-                  fit to=tree]{};
-                  }
-                      [\tsc{f}2]
-                      [\tsc{nom}P,
-                      tikz={
-                      \node[draw,circle,
-                      dashed,
-                      scale=0.9,
-                      fit to=tree]{};
-                      }
-                          [\tsc{f}1]
-                          [\tsc{ind}P
-                              [\tsc{ind}]
-                              [\tsc{an}P
-                                  [\tsc{an}]
-                                  [\tsc{cl}P
-                                      [\tsc{cl}]
-                                  ]
-                              ]
-                          ]
-                      ]
-                  ]
-              ]
-          ]
-        \end{forest}
-        \\
-      \bottomrule
-  \end{tabular}
-\end{adjustbox}
- \caption {Old High German \tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{acc} → \tit{then}}
-  \label{fig:ohg-int-wins}
-\end{figure}
-
-The relative pronoun consists of three morphemes: \tit{th}, \tit{e} and \tit{n}.
-The light head consists of three morphemes: \tit{th}, \tit{e} and \tit{r}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it.
-I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
-As each constituent of the light head is also a constituent within the relative pronoun, the light head can be absent. I illustrate this by marking the content of the dashed circles for the light head gray.
-
-I explain this constituent by constituent.
-I start with the right-most constituent of the light head that spells out as \tit{r} (\tsc{nom}P). This constituent is also a constituent in the relative pronoun, contained in \tsc{acc}P.
-I continue with the middle constituent of the light head that spells out as \tit{e} (\tsc{med}P). This constituent is also a constituent in the relative pronoun.
-I end with the left-most constituent of the light head that spells out as \tit{d} {\tsc{d}P}. This constituent is also a constituent in the relative pronoun, contained in \tsc{rp}P.
-All three constituent of the light head are also a constituent within the relative pronoun, and the light head can be absent.
 
 Consider the examples in \ref{ex:ohg-acc-nom-rep}, in which the internal nominative case competes against the external accusative case. The relative clauses are marked in bold, and the light heads and the relative pronouns are underlined.
 The internal case is nominative, as the predicate \tit{gisizzen} `to possess' takes nominative subjects. The relative pronoun \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case. It is placed between square brackets because it does not surface.
